unpackaged/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__CustomPicklist__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__CustomPicklist__c</fullName>
    <label>CustomPicklist (DEPRECATED)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>