unpackaged/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Payments__c</fullName>
    <description>Number of installments associated with the designation detail.</description>
    <inlineHelpText>This is the number of installments / expected payments for this Designation Detail record.</inlineHelpText>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>