unpackaged/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Operating_Entity_Currency_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity_Currency_Iso_Code__c</fullName>
    <label>Operating Entity Currency Iso Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Currency_Codes</valueSetName>
    </valueSet>
</CustomField>