unpackaged/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Transaction_Amount_Before_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Amount_Before_Adjusted__c</fullName>
    <label>Transaction Amount Before Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>