unpackaged/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Transaction_Amount_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Amount_Paid_to_Date__c</fullName>
    <label>Transaction Amount Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>