unpackaged/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Transaction_Amount_Paid_to_Date_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Amount_Paid_to_Date_Roll_Up__c</fullName>
    <label>Transaction Amount Paid to Date Roll Up</label>
    <summarizedField>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Transaction_Amount__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>