unpackaged/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Transaction_Face_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Face_Value__c</fullName>
    <label>Transaction Face Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>